@@ -23,6 +23,8 @@ Version 2.3.0
         request by Tomas Dohnal)
    - Added Bas Zoetekouw and Tomas Dohnal to contributors
    - Bugfix: Infinite loop when specifing a directory as configuration file
+   - Feature: Allowing popup getting the keyboard focus without getting it
+        automatically when shown
 
 Version 2.2.6
  * Robert Sowada
